[package]
name = "konik"
version = "0.2.0"
authors = ["Alexey Parfenov <zxed@alkatrazstudio.net>"]
categories = ["multimedia::audio"]
edition = "2021"
homepage = "https://github.com/alkatrazstudio/konik"
keywords = ["audio", "player", "music", "hotkeys", "flac", "ogg", "mp3", "scrobble", "listenbrainz", "lastfm"]
license = "GPL-3.0-only"
publish = false
readme = "README.md"
repository = "https://github.com/alkatrazstudio/konik"
rust-version = "1.81.0"
description = "Music player controlled by global hotkeys"

[package.metadata]
organization = "Alkatraz Studio"
qualifier = "net"
title = "Konik"

[dependencies]
alphanumeric-sort = "=1.5.3"
alsa = "=0.9.1"
anyhow = "=1.0.86"
chrono = "=0.4.38"
clap = { version = "=4.5.17", features = ["derive"] }
cpal = "=0.15.3"
cuna = "=0.7.0"
dbus = "=0.9.7"
directories = "=5.0.1"
fd-lock = "=4.0.2"
global-hotkey = "=0.6.0"
html-escape = "=0.2.13"
interprocess = { version = "=2.2.1", default-features = false }
ksni = "=0.2.2"
lofty = "=0.21.1"
md5 = "=0.7.0"
notify-rust = { version = "=4.11.1", default-features = false, features = ["d"] }
num-traits = "=0.2.19"
path-absolutize = "=3.1.1"
png = "=0.17.13"
regex = "=1.10.6"
rpassword = "=7.3.1"
serde = "=1.0.209"
serde_json = "=1.0.128"
signal-hook = "=0.3.17"
souvlaki = "=0.7.3"
symphonia = { version = "=0.5.4", default-features = false, features = ["flac", "mp3", "ogg", "vorbis"] }
ureq = { version = "=2.10.1", default-features = false, features = ["native-certs", "tls"] }
url = "=2.5.2"
walkdir = "=2.5.0"

[build-dependencies]
anyhow = "=1.0.86"
built = { version = "=0.7.4", features = ["chrono", "git2"] }
cargo_metadata = "=0.18.1"
handlebars = "=6.1.0"
termimad = "=0.30.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
